Add BLE support to react native app

--- a/ios/domopets-app/Supporting/EXShell.plist
+++ b/ios/domopets-app/Supporting/EXShell.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>developmentUrl</key>
-	<string>expa036149364094f7ebe41bcb0656680bd://rn-uin.xouabita.domopets-app.exp.direct:80</string>
+	<string>expa036149364094f7ebe41bcb0656680bd://kj-4wc.xouabita.domopets-app.exp.direct:80</string>
 	<key>isManifestVerificationBypassed</key>
 	<true/>
 	<key>isShell</key>
