--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@expo/ex-navigation": "^2.11.2",
     "expo": "^16.0.0",
     "react": "16.0.0-alpha.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-16.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-16.0.0.tar.gz",
+    "react-native-ble-manager": "^3.2.1",
+    "react-native-elements": "^0.12.1"
   }
 }
