can connect raspberry to wifi

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@expo/ex-navigation": "^2.11.2",
     "base64-js": "^1.2.0",
+    "btoa": "^1.1.2",
+    "buffer": "^5.0.6",
     "expo": "^16.0.0",
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-16.0.0.tar.gz",
