--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "btoa": "^1.1.2",
     "buffer": "^5.0.7",
     "glamorous-native": "^1.1.2",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.2",
-    "react-native-ble-manager": "^6.1.0",
+    "react-native-ble-manager": "3.3.0",
     "react-native-elements": "^0.16.0",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11"
