--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native-ble-manager": "3.3.0",
     "react-native-elements": "^0.16.0",
     "react-native-vector-icons": "^4.3.0",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-native-zeroconf": "^0.8.3",
+    "react-navigation": "^1.0.0-beta.11",
+    "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
     "babel-jest": "21.0.2",
