--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.2",
     "react-native-ble-manager": "3.3.0",
-    "react-native-elements": "^0.16.0",
+    "react-native-elements": "^0.18.5",
+    "react-native-render-html": "^3.5.2",
     "react-native-vector-icons": "^4.3.0",
+    "react-native-webrtc": "^1.58.3",
     "react-native-zeroconf": "^0.8.3",
     "react-navigation": "^1.0.0-beta.11",
     "socket.io-client": "^2.0.3"
