--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,9 +133,11 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-svg')
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-webrtc')
     compile project(':react-native-zeroconf')
     compile project(':react-native-ble-manager')
-    compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
