--- a/ios/Domopets/Info.plist
+++ b/ios/Domopets/Info.plist
@@ -38,13 +38,14 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Camera Permission</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Microphone Permission</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
 		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
 		<string>FontAwesome.ttf</string>
 		<string>Foundation.ttf</string>
 		<string>Ionicons.ttf</string>
