--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "btoa": "^1.1.2",
     "buffer": "^5.0.7",
+    "d3-shape": "^1.2.0",
     "glamorous-native": "^1.1.2",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.2",
     "react-native-ble-manager": "3.3.0",
     "react-native-elements": "^0.18.5",
     "react-native-render-html": "^3.5.2",
+    "react-native-svg": "^6.0.1-rc.3",
+    "react-native-svg-charts": "^2.1.0",
     "react-native-vector-icons": "^4.3.0",
     "react-native-webrtc": "^1.58.3",
     "react-native-zeroconf": "^0.8.3",
