--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.48.2",
     "react-native-ble-manager": "3.3.0",
     "react-native-elements": "^0.18.5",
+    "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-render-html": "^3.5.2",
     "react-native-svg": "^6.0.1-rc.3",
     "react-native-svg-charts": "^2.1.0",
